# hearing-site-backend

./: .gitignore  Cargo.toml  Procfile
action_items/: 0e034f92-7041-458d-ad54-998721849a20.txt  2f0b0362-bea4-47b4-979d-a3e374f01058.txt  323fa406-47bb-45a2-ae1f-559818bbf1cc.txt  7b06b679-7b4b-4825-8f45-9592d483b20b.txt  a30655b9-b76f-480c-90b6-2a8f875821d1.txt  e812aa16-0a31-4503-8fed-ac99b8174fe0.txt
key_points/: 0e034f92-7041-458d-ad54-998721849a20.txt  2f0b0362-bea4-47b4-979d-a3e374f01058.txt  323fa406-47bb-45a2-ae1f-559818bbf1cc.txt  7b06b679-7b4b-4825-8f45-9592d483b20b.txt  a30655b9-b76f-480c-90b6-2a8f875821d1.txt  e812aa16-0a31-4503-8fed-ac99b8174fe0.txt
participants/: 0e034f92-7041-458d-ad54-998721849a20.txt  a30655b9-b76f-480c-90b6-2a8f875821d1.txt  e812aa16-0a31-4503-8fed-ac99b8174fe0.txt
src/: audio_processing.rs  main.rs
summaries/: 0e034f92-7041-458d-ad54-998721849a20.txt  1d8cc92d-c917-409c-83a6-da10fa75519a.txt  2f0b0362-bea4-47b4-979d-a3e374f01058.txt  323fa406-47bb-45a2-ae1f-559818bbf1cc.txt  7b06b679-7b4b-4825-8f45-9592d483b20b.txt  a30655b9-b76f-480c-90b6-2a8f875821d1.txt  e812aa16-0a31-4503-8fed-ac99b8174fe0.txt
transcriptions/: 0e034f92-7041-458d-ad54-998721849a20.txt  323fa406-47bb-45a2-ae1f-559818bbf1cc.txt  a30655b9-b76f-480c-90b6-2a8f875821d1.txt  e812aa16-0a31-4503-8fed-ac99b8174fe0.txt
