[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
    "default-tls",
] }
actix-web = "4.9.0"
actix-multipart = "0.7.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.30"
rayon = "1.10.0"
futures-util = "0.3"
uuid = { version = "1.10.0", features = ["v4"] }
actix-cors = "0.7.0"
